Fixed Login Spacing

--- a/src/Screens/ForgotPassword.css
+++ b/src/Screens/ForgotPassword.css
@@ -30,7 +30,7 @@ h1 {
     color: black;
     margin: 0; /* Remove default margin */
     text-align: center;
-    flex-grow: .5; /* Allow title to take space between buttons */
+    flex-grow: .05; /* Allow title to take space between buttons */
     position: relative;
     z-index: 1; /* Ensure title is layered appropriately */
 }
